fixing posts spacing bug

--- a/wp-content/themes/milton/sass/_new-wrapper.scss
+++ b/wp-content/themes/milton/sass/_new-wrapper.scss
@@ -479,7 +479,7 @@ h3.tab{
 		padding-bottom: 0;
 
 		.post{
-			padding: .5em 10vw 5vw;
+			padding: .5em 10vw .5em;
 			position: relative;
 
 			
